--- a/VulnerableWebApp/Views/Home/Profile.cshtml
+++ b/VulnerableWebApp/Views/Home/Profile.cshtml
@@ -16,7 +16,7 @@
                             <td>@user.UserName</td>
                             <td>
                                 <input type="button" value="Add"
-                                   onclick="location.href='@Url.Action("AddFriend", "Home", new { to = @user.UserName })'" />
+                                   onclick="location.href='@Url.Action("PokeFriend", "Home", new { to = @user.UserName })'" />
                             </td>
                         </tr>
                     }
